# ClickMigrate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/clickmigrate/: __init__.py  __main__.py  cli.py  config.py  database.py  exceptions.py  manager.py
